[project]
name = "scsslib"
version = "0.0.1"
description = "Simple Client Server Socket Library"
readme = "README.md"
authors = [
    { name = "ars6502", email = "arun.r.sharma@proton.me" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
scsslib = "scsslib:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
